--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts",
     "build": "tsc --project tsconfig.json",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "ingest-cards": "ts-node src/util/ingest/Ingest.ts"
   },
   "author": "Milo Rue",
   "license": "ISC",
