--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ingest-cards": "ts-node src/util/ingest/commands/IngestCards.ts",
     "ingest-sets": "ts-node src/util/ingest/commands/IngestSets.ts",
     "ingest-decklist": "ts-node src/util/ingest/commands/IngestDeckList.ts",
-    "ingest-decks": "ts-node src/util/ingest/commands/IngestDecks.ts"
+    "ingest-decks": "ts-node src/util/ingest/commands/IngestDecks.ts",
+    "add-token": "ts-node src/util/services/tokenService/commands/addToken.command.ts"
   },
   "author": "Milo Rue",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
+    "node-schedule": "^1.3.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
