--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "Milo Rue",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^5.29.2",
+    "@sentry/tracing": "^5.29.2",
     "apollo-server": "^2.19.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
