--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.ts",
     "build": "tsc --project tsconfig.json",
     "start": "node dist/server.js",
-    "ingest-database": "ts-node src/util/ingest/Ingest.ts",
+    "ingest-database": "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks",
     "ingest-cards": "ts-node src/util/ingest/commands/IngestCards.ts",
     "ingest-setlist": "ts-node src/util/ingest/commands/IngestSetList.ts",
     "ingest-sets": "ts-node src/util/ingest/commands/IngestSets.ts",
