--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^14.14.10",
     "@types/sqlite3": "^3.1.6",
+    "@types/type-is": "^1.6.3",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
