--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,16 @@
       "allowSyntheticDefaultImports": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
       "lib": [
         "es2016",
         "es2019"
       ]
     },
-    "include": [
-      "./src"
+    "exclude": [
+      "node_modules",
+      "dist"
     ]
-  }
+}
   
