support email host / port via env config

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,7 @@ DB_USER=postgres (or whatever you want)
 DB_PASS=<password>
 DB_DATABASE=mtgjson (or whatever you want)
 
+EMAIL_HOST=smtp.host
+EMAIL_PORT=465
 EMAIL_USER=test@gmail.com
 EMAIL_PASS=pass
