--- a/types/package.json
+++ b/types/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc",
     "release": "release-it --verbose"
   },
-  "author": "mrue",
+  "author": "Milo Rue",
   "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "1.20.0",
