--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "drop-database": "ts-node src/util/ingest/commands/UpdateData.ts",
     "rebuild-database": "ts-node src/util/ingest/commands/UpdateData.ts && npm run ingest-database",
     "ingest-database": "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks && npm run ingest-metadata",
+    "ingest-prices": "node --max_old_space_size=16384 --require ts-node/register src/util/ingest/commands/IngestPrices.ts",
     "ingest-cards": "ts-node src/util/ingest/commands/IngestCards.ts",
     "ingest-setlist": "ts-node src/util/ingest/commands/IngestSetList.ts",
     "ingest-sets": "ts-node src/util/ingest/commands/IngestSets.ts",
