--- a/package.json
+++ b/package.json
@@ -24,38 +24,38 @@
   "author": "Milo Rue",
   "license": "ISC",
   "dependencies": {
-    "@sentry/node": "^5.29.2",
-    "@sentry/tracing": "^5.29.2",
-    "@types/nodemailer": "^6.4.0",
-    "apollo-server": "^2.19.0",
+    "@types/nodemailer": "^6.4.4",
+    "apollo-server": "^3.3.0",
+    "apollo-server-core": "^3.3.0",
+    "apollo-tracing": "^0.15.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.12.2",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.4.0",
-    "node-schedule": "^1.3.2",
-    "nodemailer": "^6.4.17",
-    "pg": "^8.5.1",
+    "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.2",
+    "node-schedule": "^2.0.0",
+    "nodemailer": "^6.6.3",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.0",
+    "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.29",
-    "uuid": "^8.3.1",
-    "validator": "^13.5.1",
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2",
+    "validator": "^13.6.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^14.14.10",
-    "@types/sqlite3": "^3.1.6",
+    "@types/node": "^14.17.12",
+    "@types/sqlite3": "^3.1.7",
     "@types/type-is": "^1.6.3",
-    "@types/uuid": "^8.3.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.6",
-    "release-it": "^14.2.2",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "@types/uuid": "^8.3.1",
+    "jest": "^27.1.0",
+    "nodemon": "^2.0.12",
+    "release-it": "^14.11.5",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.4.2"
   }
 }
