--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtgjson-graphql-v2",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A GraphQL API for mtgjson.com",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
     "revoke-token": "ts-node src/util/services/tokenService/commands/revokeToken.command.ts"
   },
   "author": "Milo Rue",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/nodemailer": "^6.4.4",
     "apollo-server": "^3.3.0",
