Support max space

--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "mtgjson-graphql-v2",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A GraphQL API for mtgjson.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc --project tsconfig.json",
-    "start": "node dist/server.js",
-    "drop-database": "ts-node src/util/ingest/commands/UpdateData.ts",
+    "dev":              "nodemon src/server.ts",
+    "build":            "tsc --project tsconfig.json",
+    "start":            "node dist/server.js",
+    "drop-database":    "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/UpdateData.ts",
     "rebuild-database": "npm run drop-database && npm run ingest-database",
-    "ingest-database": "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks && npm run ingest-metadata && npm run ingest-prices",
-    "ingest-prices": "node --max_old_space_size=16384 --require ts-node/register src/util/ingest/commands/IngestPrices.ts",
-    "ingest-cards": "ts-node src/util/ingest/commands/IngestCards.ts",
-    "ingest-setlist": "ts-node src/util/ingest/commands/IngestSetList.ts",
-    "ingest-sets": "ts-node src/util/ingest/commands/IngestSets.ts",
-    "ingest-decklist": "ts-node src/util/ingest/commands/IngestDeckList.ts",
-    "ingest-decks": "ts-node src/util/ingest/commands/IngestDecks.ts",
-    "ingest-metadata": "ts-node src/util/ingest/commands/IngestMetaData.ts",
-    "add-token": "ts-node src/util/services/tokenService/commands/addToken.command.ts",
-    "revoke-token": "ts-node src/util/services/tokenService/commands/revokeToken.command.ts"
+    "ingest-database":  "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks && npm run ingest-metadata && npm run ingest-prices",
+    "ingest-prices":    "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestPrices.ts",
+    "ingest-cards":     "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestCards.ts",
+    "ingest-setlist":   "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSetList.ts",
+    "ingest-sets":      "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSets.ts",
+    "ingest-decklist":  "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDeckList.ts",
+    "ingest-decks":     "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDecks.ts",
+    "ingest-metadata":  "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestMetaData.ts",
+    "add-token":        "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/addToken.command.ts",
+    "revoke-token":     "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/revokeToken.command.ts"
   },
   "author": "Milo Rue",
   "license": "MIT",
