--- a/package.json
+++ b/package.json
@@ -4,57 +4,63 @@
   "description": "A GraphQL API for mtgjson.com",
   "main": "index.js",
   "scripts": {
-    "dev":              "nodemon src/server.ts",
-    "build":            "tsc --project tsconfig.json",
-    "start":            "node dist/server.js",
-    "drop-database":    "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/UpdateData.ts",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc --project tsconfig.json",
+    "start": "node dist/server.js",
+    "drop-database": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/UpdateData.ts",
     "rebuild-database": "npm run drop-database && npm run ingest-database",
-    "ingest-database":  "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks && npm run ingest-metadata && npm run ingest-prices",
-    "ingest-prices":    "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestPrices.ts",
-    "ingest-cards":     "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestCards.ts",
-    "ingest-setlist":   "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSetList.ts",
-    "ingest-sets":      "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSets.ts",
-    "ingest-decklist":  "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDeckList.ts",
-    "ingest-decks":     "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDecks.ts",
-    "ingest-metadata":  "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestMetaData.ts",
-    "add-token":        "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/addToken.command.ts",
-    "revoke-token":     "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/revokeToken.command.ts"
+    "ingest-database": "npm run ingest-cards && npm run ingest-setlist && npm run ingest-sets && npm run ingest-decklist && npm run ingest-decks && npm run ingest-metadata && npm run ingest-prices",
+    "ingest-prices": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestPrices.ts",
+    "ingest-cards": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestCards.ts",
+    "ingest-setlist": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSetList.ts",
+    "ingest-sets": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestSets.ts",
+    "ingest-decklist": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDeckList.ts",
+    "ingest-decks": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestDecks.ts",
+    "ingest-metadata": "node -r ts-node/register --max-old-space-size=16384 src/util/ingest/commands/IngestMetaData.ts",
+    "add-token": "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/addToken.command.ts",
+    "revoke-token": "node -r ts-node/register --max-old-space-size=16384 src/util/services/tokenService/commands/revokeToken.command.ts"
   },
-  "author": "Milo Rue",
+  "author": "Zach Halpern",
+  "contributors": [
+    "Milo Rue"
+  ],
   "license": "MIT",
   "dependencies": {
-    "@types/nodemailer": "^6.4.4",
-    "apollo-server": "^3.3.0",
-    "apollo-server-core": "^3.3.0",
-    "apollo-tracing": "^0.15.0",
-    "axios": "^0.21.1",
+    "@apollo/server": "^4.3.0",
+    "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
+    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
-    "graphql": "^15.5.2",
-    "node-schedule": "^2.0.0",
-    "nodemailer": "^6.6.3",
-    "pg": "^8.7.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.2",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.37",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "winston": "^3.3.3"
+    "resolve-glob": "^1.0.0",
+    "sqlite3": "^5.1.4",
+    "type-graphql": "^2.0.0-beta.1",
+    "typeorm": "^0.3.11",
+    "uuid": "^9.0.0",
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^14.17.12",
-    "@types/sqlite3": "^3.1.7",
+    "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
+    "@types/sqlite3": "^3.1.8",
     "@types/type-is": "^1.6.3",
-    "@types/uuid": "^8.3.1",
-    "jest": "^27.1.0",
-    "nodemon": "^2.0.12",
-    "release-it": "^14.11.5",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.2"
+    "@types/uuid": "^9.0.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "release-it": "^15.6.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "engines": {
+    "node": "^18.0.0"
   }
 }
